finished transfer learning lab

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,20 @@ data
 models
 .ipynb_checkpoints
 bottlenecks
+/inception-100.zip
+/resnet-100.zip
+/vgg-100.zip
+/vgg-100/vgg_cifar10_100_bottleneck_features_train.p
+/vgg-100/vgg_cifar10_bottleneck_features_validation.p
+/vgg-100/vgg_traffic_100_bottleneck_features_train.p
+/vgg-100/vgg_traffic_100_bottleneck_features_train.p
+/vgg-100/vgg_traffic_bottleneck_features_validation.p
+/resnet-100/resnet_cifar10_100_bottleneck_features_train.p
+/resnet-100/resnet_cifar10_bottleneck_features_validation.p
+/resnet-100/resnet_traffic_100_bottleneck_features_train.p
+/resnet-100/resnet_traffic_bottleneck_features_validation.p
+/resnet-100/resnet_traffic_100_bottleneck_features_train.p
+/inception-100/inception_cifar10_100_bottleneck_features_train.p
+/inception-100/inception_cifar10_bottleneck_features_validation.p
+/inception-100/inception_traffic_100_bottleneck_features_train.p
+/inception-100/inception_traffic_bottleneck_features_validation.p
